# AI-Robot-Guide-

./: .gitignore  DEV_HANDOVER_NOTES.md  README.md  README_PURE_PYTHON.md  USER_MANUAL.md  api_response_raw.txt  details.json  docker-compose.db.yml  docker-compose.yml  download_model.py  edge-tts.py  implementation_plan.md  nexus-dev.md  prepare_upload.sh  pytest.ini  requirements.txt  review_report.md  start_all.sh  start_backend.sh  start_line.sh  start_line_worker.sh  start_web.sh  walkthrough.md
Back-end/: categories_found.txt  debug_scraper.py  register_device.py  requirements-cpu.txt  requirements.txt  seed_analytics_data.py  system_health_check.py  test_frontend_director_flow.py  test_frontline_connection.py  test_multilang_system.py  test_rag_api.sh  test_rag_query.py  test_speech_handler.py
avatar/: avatar_enhanced.js  avatar_export.html  avatar_modular_demo.html  index.js
avatar-v1-backup/: README.md  animations.js  app.js  avatar_enhanced.js  avatar_modular_demo.html  index.html  index.js  particles.js  sounds.js  styles-avatar.css  styles-extended.css  styles.css  timeline.js
cpp-audio-engine/: CMakeLists.txt  Dockerfile
cpp-audio-engine/.cache/clangd/index/: audio_processor.cpp.4CDDEF6BC7CB8C3F.idx  audio_processor.h.776A33E82088288D.idx  audio_types.h.2AAF1CAC3A8C82E0.idx  grpc_server.cpp.08C28A308F860490.idx  main.cpp.09FBE1F681A1D27D.idx
cpp-audio-engine/include/: audio_processor.h  audio_types.h  whisper_service.h
cpp-audio-engine/src/: audio_processor.cpp  grpc_server.cpp  main.cpp  whisper_service.cpp
docs/: ARCHITECTURE_DEEP_DIVE.md  INDEX.md  README.md  SETUP_API_KEYS.md  SETUP_FULL_INSTALLATION.md  SETUP_QUICKSTART.md  สารบัญ.md
frontend/: about.html  admin.html  alerts.html  chat.html  dashboard.html  import.html  (+6 more)
frontend-next/: package.json
(+321 files in other folders)
